<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backG"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/q1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/question1"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/a1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/answer1"
        android:textStyle="bold|italic"
        android:visibility="gone" />

    <TextView
        android:id="@+id/q2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/question2"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/a2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/answer2"
        android:textStyle="bold|italic"
        android:visibility="gone" />

    <TextView
        android:id="@+id/q3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/question3"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/a3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/answer3"
        android:textStyle="bold|italic"
        android:visibility="gone" />

    <TextView
        android:id="@+id/q4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/question4"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/a4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/answer4"
        android:textStyle="bold|italic"
        android:visibility="gone" />
</LinearLayout>